2015-04-09  Vladimir Makarov  <vmakarov@redhat.com>

PR target/65710
	* lra-int.h (lra_bad_spill_regno_start): New.
	* lra.c (lra_bad_spill_regno_start): New.
	(lra): Set up lra_bad_spill_regno_start.  Set up
	lra_constraint_new_regno_start unconditionally.
	* lra-assigns.c (spill_for): Use lra_bad_spill_regno_start for
	spill preferences.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@221956 138bc75d-0d04-0410-961f-82ee72b054a4